# norris

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  init.sql  main.py  populate.py  requirements.txt  ruff.toml  rustfmt.toml
.sqlx/: query-0a6db31a2d684be444c7c7916f9721076c648d6a3ec648f4da2d76a89072530c.json  query-30df0e9af0a79ded5452206d8534facaa33949037cc80a8b07db614ca9bf7bd3.json  query-32da8416a5013e9cc1ab43aee3b877568988fd2bb3408bcf4932d16b48bea4b0.json  query-4036573a4416bed17e62ae9dbd974233977ec4afc43691f3a25f5a4d91112cf6.json  query-4291b65ff3a6f639443ee0daf76f53bf49b11c4bbf9afff8012e4e0f72062991.json  query-48242f1f932743ca57a53068d0c4e64da1a56482d24aba752780b34d45076a7d.json  query-5a5e9d259876b67c847adf84832a53d1934f9a370d992f1063cc5f4fd6ef3bfb.json  query-6eb7dd77d201ec8aa3f80beba4cfc1a2090959b646f3b139dfebcc2e2e08fbfc.json  query-7170b8c3e464e4c1617cccdb6e2e4a4748bd4f9947ac0f556f5ff5a7a10a0a9d.json  query-8e161c79a00557e2c90a5b458b57394d0c09e5787789d243ac3e54d69415fdec.json  query-8ed410dc4e9d86d8f7047a6a4a897c3927f5f03bbc3f22c0e2fde395d94537da.json  query-9c52a3df5a974c5aa7c175ef91281b15c326cdad76683baf22616274d7fc9d53.json  query-a076bea45c5f854448801d19d66da57db5abc147e282cf144820691429fe5ab1.json  query-a8b82aebd29c0d889bb68882097b8579e5be37aa0d1d26539f1e5e8622baa501.json  query-b09f1f01b55d5647da0212e7621d8cfd45619c1f21f1e828056e14801770a3b2.json  query-c0de58b6b50c6a4afe40b42fa2d0a58a7656d5f7e7b54777d90b6cbc501d73cf.json  query-c689b07a9f6c9a5a5945e03653370157d8ba0b39914abd4dae7929159423e6ad.json  query-d5fbd29fd6305d632296f18ef5b3ee13852225cb185a10c09f83231659061dd7.json  query-d7737fe323be10296572ab849b5df225dac7abc6e742dcc8742588de3e38fde4.json  query-dc4f0ac950cf4ddb5d0ea1bf9c820c0370c0e1222c843836a92db9a802afdbf1.json  query-e4a02a6c2a774b8187cbf363e745aa17e8953ea5a5d03fe6e36a2f3eb0ff07a8.json  query-e5500a7babe3ce2533f9d30051640db5fb69bff95223577cf8e093c917f53eb0.json  query-e95dc772bdf27ed55e905bca895e826435440385fed6b5410629f5030857c4dc.json  query-f987ecc658a1c6409d117a189b70122ad926946c5a847aeb8da5fc8f172e8722.json  query-fcf303d9ee132ca65e4444ffa12f23721f88270ab319048679aa4b2bff7563b8.json
norris/: __init__.py  bot.py  config.py  events.py
queries/: create-table-registrations.sql  create-table-users.sql  insert-new-registration.sql  select-registration-status.sql  select-user-name.sql  (+1 more)
src/: commands.rs  (+11 more)
(+75 files in other folders)
